--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
 <body>
     <header>
         <nav>
-            <h3>G3 Architects</h3>
-            <ul>
+            <h3 class="nav-title">G3 Architects</h3>
+            <ul class="">
                 <li> <a href="">Home</a> </li>
                 <li> <a href="">About</a> </li>
                 <li> <a href="">Contact Us</a> </li>
                 <li> <a href="">Login</a> </li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <p class="banner-descriptionn">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            </div>
+            <button class="btn-primary">Explore More</button>
+            <img src="images/banner.png" alt="">
+        </div>
     </header>
 </body>
 </html>
