--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
     </header>
     <!-- Header end -->
     <main>
-        <section>
-            <div>
+        <section class="teams-container">
+            <div class="teams-img-container">
                 <img src="images/team1.png" alt="">
                 <img src="images/team2.png" alt="">
                 <img src="images/team3.png" alt="">
                 <img src="images/team4.png" alt="">
             </div>
-            <div>
-                <h1>Quick list of Our Features</h1>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="quick">Quick list</span> <span class="of-our">of Our</span> <span class="teams-feachures">Features</span></h3>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
