--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="teams-content">
                 <h3 class="teams-title"><span class="quick">Quick list</span> <span class="of-our">of Our</span> <span class="teams-feachures">Features</span></h3>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
