--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- feacheres section start -->
+        <section class="features">
+
+        </section>
+        <!-- facts section starting -->
+        <section class="facts">
+            <h3 class="nav-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </section>
     </main>
 
 </body>
