--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
             </div>
         </section>
     </main>
-
+    <footer>
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 </html>
